compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@multi_assign_undeclared_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/multi_assign_undeclared_fail.tapir
---
[E0001] Error: Unknown variable 'a'
   ╭─[ multi_assign_undeclared_fail.tapir:2:1 ]
   │
 2 │ a, b = 1, 2;
   │ ┬  
   │ ╰── Unknown variable
───╯
[E0001] Error: Unknown variable 'b'
   ╭─[ multi_assign_undeclared_fail.tapir:2:4 ]
   │
 2 │ a, b = 1, 2;
   │    ┬  
   │    ╰── Unknown variable
───╯
