compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_fail_snapshot_tests@property_conflicts_with_global_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/symtab_visitor.rs
expression: diagnostics.pretty_string(false)
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/symtab_visitor/property_conflicts_with_global_fail.tapir
---
[E0034] Error: Property 'counter' conflicts with an existing global variable
   ╭─[ property_conflicts_with_global_fail.tapir:2:10 ]
   │
 1 │ global counter = 0;
   │        ───┬───  
   │           ╰───── Originally declared here
 2 │ property counter: int;
   │          ───┬───  
   │             ╰───── Conflicts with global variable
───╯
