compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@extern_fn_call_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/extern_fn_call_success.tapir
---
Script(
  imports: [],
  struct_declarations: [],
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      kind: Regular,
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: VariableDeclaration(
            idents: [
              TypedIdent(
                ident: Ident(
                  span: "[span]",
                  ident: "result",
                ),
                ty: None,
              ),
            ],
            values: [
              Expression(
                span: "[span]",
                kind: Call(
                  name: "get_value",
                  arguments: [
                    Expression(
                      span: "[span]",
                      kind: Integer(5),
                      meta: {},
                    ),
                  ],
                ),
                meta: {
                  "compiler::ast::InternalOrExternalFunctionId": "External(ExternalFunctionId(0))",
                },
              ),
            ],
          ),
          meta: {
            "alloc::vec::Vec<compiler::ast::SymbolId>": "[SymbolId(0)]",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [
    ExternFunctionDefinition(
      name: "get_value",
      span: "[span]",
      arguments: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "x",
          ),
          ty: Some(TypeWithLocation(
            t: Some(Int),
            name: "int",
            span: "[span]",
          )),
        ),
      ],
      return_types: FunctionReturn(
        types: [
          TypeWithLocation(
            t: Some(Fix),
            name: "fix",
            span: "[span]",
          ),
        ],
        span: "[span]",
      ),
      meta: {
        "compiler::ast::ExternalFunctionId": "ExternalFunctionId(0)",
      },
    ),
  ],
  builtin_functions: [],
)
