compiler/src/compile/snapshots/compiler__compile__symtab_visitor__test__symtab_success_snapshot_tests@extern_fn_statement_call_success.tapir.snap
---
source: compiler/src/compile/symtab_visitor.rs
expression: script
input_file: compiler/src/compile/snapshot_tests/symtab_visitor/extern_fn_statement_call_success.tapir
---
Script(
  property_declarations: [],
  globals: [],
  functions: [
    Function(
      name: "@toplevel",
      span: "[span]",
      statements: [
        Statement(
          span: "[span]",
          kind: Call(
            name: "do_something",
            arguments: [
              Expression(
                span: "[span]",
                kind: Integer(3),
                meta: {},
              ),
              Expression(
                span: "[span]",
                kind: Fix,
                meta: {},
              ),
            ],
          ),
          meta: {
            "compiler::ast::InternalOrExternalFunctionId": "External(ExternalFunctionId(0))",
          },
        ),
      ],
      arguments: [],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      modifiers: FunctionModifiers(
        is_event_handler: None,
      ),
      meta: {
        "compiler::ast::FunctionId": "FunctionId(0)",
        "compiler::compile::symtab_visitor::FunctionArgumentSymbols": "FunctionArgumentSymbols([])",
      },
    ),
  ],
  extern_functions: [
    ExternFunctionDefinition(
      name: "do_something",
      span: "[span]",
      arguments: [
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "x",
          ),
          ty: Some(TypeWithLocation(
            t: Int,
            span: "[span]",
          )),
        ),
        TypedIdent(
          ident: Ident(
            span: "[span]",
            ident: "y",
          ),
          ty: Some(TypeWithLocation(
            t: Fix,
            span: "[span]",
          )),
        ),
      ],
      return_types: FunctionReturn(
        types: [],
        span: "[span]",
      ),
      meta: {
        "compiler::ast::ExternalFunctionId": "ExternalFunctionId(0)",
      },
    ),
  ],
  builtin_functions: [],
)
